PacMan moves across screen, back and forth, animated.

--- a/hw1/solution/inclass.html
+++ b/hw1/solution/inclass.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src = 'exercise.js'>
+        <script src = 'exercise test.js'>
         </script>
     </head>
     <body>
